--- a/src/components/fooditem/fooditem.css
+++ b/src/components/fooditem/fooditem.css
@@ -60,6 +60,20 @@ width: 35px;
   border-radius: 50px;
   background-color: white;
 }
-.food-item-counter img{
-  
+
+
+
+button {
+  margin: 10px 0;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 5px;
+  background-color: tomato;
+  color: white;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+button:hover {
+  background-color: darkred;
 }
