--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,28 +1,34 @@
 .navbar {
-  padding: 20px 10%;
+  top: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position: relative  ;
+  width:max-content;
+  margin: 0 auto;
+  width: 1066px;
+background-color: hsl(108, 39%, 45%);
+  position: fixed;
+  z-index: 234657;
+  color: white;
 }
 
 .navbar .logo {
   width: 150px; /* Default logo size */
   max-width: 100%; /* Make it responsive */
   height: auto; /* Maintain aspect ratio */
-  color: tomato;
+  color: white;
   border: 1px solid rgb(204, 31, 31);
   border-radius: 40%;
   padding: 4px 3px;
   text-align: center;
-  background-color: rgba(0, 255, 13, 0.38);
+
 }
 
 .navbar-menu {
   display: flex;
   list-style: none;
   gap: 20px;
-  color: #49557e;
+
   font-size: 18px;
 }
 
@@ -43,7 +49,7 @@
   position: absolute;
   min-width: 10px;
   min-height: 10px;
-  background-color: tomato;
+
   border-radius: 50%;
   top: -8px;
   right: -8px;
@@ -63,7 +69,7 @@
 .navbar button {
   background: transparent;
   font-size: 16px;
-  color: #49557e;
+  color: #fcfdfd;
   border: 1px solid tomato;
   border-radius: 50px;
   padding: 10px 20px; /* Reduced padding for mobile */
@@ -71,7 +77,7 @@
 }
 
 .navbar button:hover {
-  background-color: #fff4f2;
+  background-color: #18cc07;
 }
 
 /* Mobile Menu Styles */
@@ -92,7 +98,7 @@
 /* Responsive Styles */
 @media (max-width: 768px) {
   .navbar {
-    padding: 15px 5%; /* Adjust padding for smaller screens */
+width: 100%;
   }
 
   .navbar-menu {
@@ -101,7 +107,7 @@
     position: absolute;
     right: 10px;
     top: 60px;
-    background-color: white; /* Background for mobile menu */
+  /* Background for mobile menu */
     border-radius: 5px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     z-index: 10; /* Ensure it appears above other elements */
